--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,42 +1,33 @@
 pipeline {
     agent {
         docker {
-            image 'python:2-slim'
+            image 'python:3.9-slim' // Correction de l'image Docker
         }
     }
 
     environment {
-        SELENIUM_GRID_URL = "http://192.168.1.55:4444"
+        SELENIUM_GRID_URL = "http://192.168.1.55:4444/wd/hub"
     }
 
     stages {
                stage('Install Dependencies') {
             steps {
-                    sh 'pip install -r requirements.txt'
+                sh '''
+                    apt-get update && apt-get install -y unzip curl
+                    pip install --upgrade pip
+                    pip install -r requirements.txt
+                '''
             }
         }
 
-         stage('Run Tests') {
+        stage('Run Tests') {
             steps {
                 script {
                     sh '''
-                    robot  -d reports tests/
+                        python -m robot --variable SELENIUM_GRID_URL:${SELENIUM_GRID_URL} tests/login_templatecopy.robot
                     '''
                 }
             }
         }
-
-        stage('Run Selenium Tests') {
-            steps {
-                sh 'mvn test -Dselenium.grid.url=$SELENIUM_GRID_URL'
-            }
-        }
-        stage('Generate Allure Report') {
-             steps {
-                 sh 'mvn allure:report'
-             }
-         }
- 
     }
-
-   
+}
