--- a/jenkinsfile
+++ b/jenkinsfile
@@ -2,7 +2,9 @@ pipeline {
     agent {
         docker {
             image 'python:3.9-slim'
-            
+            args '-u root:root'
+
+
         }
     }
 
@@ -20,9 +22,7 @@ pipeline {
         stage('Run Tests') {
             steps {
                 script {
-                    sh '''
-                        python -m robot --variable SELENIUM_GRID_URL:${SELENIUM_GRID_URL} tests/login_templatecopy.robot
-                    '''
+                    sh 'python -m robot tests/login_templatecopy.robot'
                 }
             }
         }
