--- a/jenkinsfile
+++ b/jenkinsfile
@@ -2,6 +2,9 @@ pipeline {
     agent {
         docker {
             image 'python:3.9-slim'
+            args '-u root:root'
+
+
         }
     }
 
@@ -10,25 +13,20 @@ pipeline {
     }
 
     stages {
-        stage('Install Dependencies') {
+               stage('Install Dependencies') {
             steps {
-                sh '''
-                    # Devenir superutilisateur
-                    apt-get update && apt-get install -y sudo
-                    sudo pip install -r requirements.txt
-                '''
-            }
+                sh 'pip install -r requirements.txt'
+                sh 'pip freeze'
+
+             }
         }
 
         stage('Run Tests') {
             steps {
                 script {
-                    sh '''
-                        python -m robot --variable SELENIUM_GRID_URL:${SELENIUM_GRID_URL} tests/login_templatecopy.robot
-                    '''
+                    sh 'python -m robot tests/login_templatecopy.robot'
                 }
             }
         }
     }
 }
-
