--- a/jenkinsfile
+++ b/jenkinsfile
@@ -24,6 +24,7 @@ pipeline {
         stage('Run Tests') {
             steps {
                 script {
+                    sh 'robot --version'
                     sh 'python -m robot tests/login_templatecopy.robot'
                 }
             }
