--- a/jenkinsfile
+++ b/jenkinsfile
@@ -24,6 +24,8 @@ pipeline {
         stage('Run Tests') {
             steps {
                 script {
+                    sh 'pip install robotframework'
+                    sh ' .venv/Scripts/Activate.ps1 '
                     sh 'robot --version'
                     sh 'python -m robot tests/login_templatecopy.robot'
                 }
