--- a/jenkinsfile
+++ b/jenkinsfile
@@ -10,13 +10,13 @@ pipeline {
 
     environment {
         SELENIUM_GRID_URL = "http://192.168.1.55:4444/wd/hub"
-        VENV_DIR = ".venv"
     }
 
     stages {
                stage('Install Dependencies') {
             steps {
-                    sh '. $VENV_DIR/Scripts/activate.ps1'
+                    sh '.venv\Scripts\activate.ps1
+'
                 sh 'pip install -r requirements.txt'
                 sh 'pip freeze'
 
@@ -26,7 +26,7 @@ pipeline {
         stage('Run Tests') {
             steps {
                 script {
-                    sh '. $VENV_DIR/Scripts/activate.ps1'
+                    sh '.venv\Scripts\activate.ps1'
                     sh 'pip install robotframework'
                     // sh ' .venv/Scripts/Activate.ps1 '
                     sh 'robot --version'
