--- a/jenkinsfile
+++ b/jenkinsfile
@@ -15,7 +15,7 @@ pipeline {
     stages {
                stage('Install Dependencies') {
             steps {
-                    sh '.venv\Scripts\activate.ps1
+                    sh '.venv/Scripts/activate.ps1
 '
                 sh 'pip install -r requirements.txt'
                 sh 'pip freeze'
@@ -26,7 +26,7 @@ pipeline {
         stage('Run Tests') {
             steps {
                 script {
-                    sh '.venv\Scripts\activate.ps1'
+                    sh '.venv/Scripts/activate.ps1'
                     sh 'pip install robotframework'
                     // sh ' .venv/Scripts/Activate.ps1 '
                     sh 'robot --version'
