--- a/jenkinsfile
+++ b/jenkinsfile
@@ -15,8 +15,7 @@ pipeline {
     stages {
                stage('Install Dependencies') {
             steps {
-                    sh '.venv/Scripts/activate.ps1
-'
+                    sh '.venv/Scripts/activate.ps1'
                 sh 'pip install -r requirements.txt'
                 sh 'pip freeze'
 
