--- a/jenkinsfile
+++ b/jenkinsfile
@@ -2,7 +2,7 @@ pipeline {
     agent {
         docker {
             image 'python:3.9-slim'
-            args '-u root:root'
+            args '--network=host'  // Permet d'accéder à Selenium Grid
 
 
         }
@@ -11,12 +11,7 @@ pipeline {
     environment {
         SELENIUM_GRID_URL = "http://192.168.1.55:4444/wd/hub"
     }
-     services {
-        selenium-hub {
-            image 'selenium/standalone-chrome'
-            ports = ['4444:4444']
-        }
-    }
+
 
     stages {
                stage('Install Dependencies') {
