--- a/jenkinsfile
+++ b/jenkinsfile
@@ -3,6 +3,8 @@ pipeline {
         docker {
             image 'python:3.9-slim'
             args '--network=host'  // Permet d'accéder à Selenium Grid
+
+
         }
     }
 
@@ -10,32 +12,26 @@ pipeline {
         SELENIUM_GRID_URL = "http://192.168.1.55:4444/wd/hub"
     }
 
-    stages {
-        stage('Setup Virtual Environment') {
-            steps {
-                script {
-                    sh 'python -m venv .venv'
-                    sh 'source .venv/bin/activate'
-                }
-            }
-        }
 
-        stage('Install Dependencies') {
+    stages {
+               stage('Install Dependencies') {
             steps {
-                script {
-                    sh '.venv/bin/python -m pip install --upgrade pip'
-                    sh '.venv/bin/pip install -r requirements.txt || pip install --user -r requirements.txt'
-                    sh '.venv/bin/pip freeze'
-                }
-            }
+                   // sh '.venv/Scripts/activate.ps1'
+                sh 'pip install -r requirements.txt'
+                sh 'pip freeze'
+
+             }
         }
 
         stage('Run Tests') {
             steps {
                 script {
                     sh 'echo "SELENIUM_GRID_URL: $SELENIUM_GRID_URL"'
-                    sh '.venv/bin/python -m pip install robotframework' // Assure que Robot Framework est installé
-                    sh '.venv/bin/python -m robot tests/login_templatecopy.robot'
+                   // sh '.venv/Scripts/activate.ps1'
+                    sh 'pip install robotframework'
+                    // sh ' .venv/Scripts/Activate.ps1 '
+                    // sh 'robot --version'
+                    sh 'python -m robot tests/login_templatecopy.robot'
                 }
             }
         }
