--- a/jenkinsfile
+++ b/jenkinsfile
@@ -31,7 +31,7 @@ pipeline {
                     sh 'pip install robotframework'
                     // sh ' .venv/Scripts/Activate.ps1 '
                     // sh 'robot --version'
-                    sh 'python3 -m robot tests/test_temp.robot'
+                    sh 'python -m robot tests/login_templatecopy.robot'                    
                 }
             }
         }
