--- a/jenkinsfile
+++ b/jenkinsfile
@@ -17,7 +17,7 @@ pipeline {
                stage('Install Dependencies') {
             steps {
                    // sh '.venv/Scripts/activate.ps1'
-                sh 'pip install --user -r requirements.txt'
+                sh 'pip install --user -r requirements.txt --no-cache-dir'
              }
         }
 
