--- a/jenkinsfile
+++ b/jenkinsfile
@@ -34,4 +34,19 @@ pipeline {
             }
         }
     }
+    
+    post {
+                always {
+                        robot(
+                        outputPath          : 'results',
+                        outputFileName      : "output.xml",
+                        reportFileName      : 'report.html',
+                        logFileName         : 'log.html',
+                        disableArchiveOutput: false,
+                        passThreshold       : 95.0,
+                        unstableThreshold   : 95.0,
+                        otherFiles          : "*/.png",
+                    )
+                }
+            }
 }
