--- a/jenkinsfile
+++ b/jenkinsfile
@@ -35,18 +35,21 @@ pipeline {
         }
     }
     
-    // post {
-    //             always {
-    //                     robot(
-    //                     outputPath          : 'results',
-    //                     outputFileName      : "output.xml",
-    //                     reportFileName      : 'report.html',
-    //                     logFileName         : 'log.html',
-    //                     disableArchiveOutput: false,
-    //                     passThreshold       : 95.0,
-    //                     unstableThreshold   : 95.0,
-    //                     otherFiles          : "*/.png",
-    //                 )
-    //             }
-    //         }
+    post {
+                always {
+                        
+
+                        robot(  outputPath: ".",
+                                passThreshold: 90.0,
+                                unstableThreshold: 70.0,
+                                disableArchiveOutput: true,
+                                outputFileName: "output.xml",
+                                logFileName: 'log.html',
+                                reportFileName: 'report.html',
+                                countSkippedTests: true,    // Optional, defaults to false
+                                otherFiles: 'screenshot-*.png'
+)
+                    
+                }
+            }
 }
